# learning_cpp

./: CMakeLists.txt  README.md  StringSplit.cpp  c_shell.c  cpu_load.cpp  gperftools.sh  ipConvert.cpp  makefile  readAndMmapTest.cpp
CharConvertTool/: build.sh  encode_convert.cpp  encode_convert.h  main.cpp  test
IO/: 01.使用select函数循环读取键盘输入.cpp
IO/02.使用select函数提高服务器处理能力/: client.cpp
IO/03.使用poll函数提高服务器处理能力/: client.cpp  server.cpp
IO/04.使用epoll函数提高服务器处理能力/: client.cpp
Linux_Net/02.使用select函数提高服务器处理能力/: server.cpp
Linux_Net/03.使用poll函数提高服务器处理能力/: makefile  readme
Linux_Net/04.使用epoll函数提高服务器处理能力/: server.cpp
Linux_Net/Reactor/: 01_simple_reactor.c
Linux_Net/TCP_Server/: client.cpp  makefile  server.cpp
Press_Tool/: http.sh  http_load
Singleton/: CMakeLists.txt  Singleton.h  Singleton_Pattern_by_fjp.cpp  main.cpp
ad_system/: CMakeLists.txt  README.md  TODO.txt  globalConfig.hpp  main.cpp  server.cpp  server.hpp  serverWork.cpp  serverWork.hpp  serverframe.cpp  serverframe.hpp
ad_system/common/: encode_convert.cpp  encode_convert.hpp  globalHelper.cpp  globalHelper.hpp  singleton.h
ad_system/config/: server.ini
ad_system/server3/: CoreWorkInterface.hpp  README.md  connection.cpp  connection.hpp  main  main.cpp  mime_types.cpp  request_handler.cpp  request_handler.hpp  server.cpp  server.hpp
ad_system/server3/client/: async_client.cpp  build.sh  sync_client.cpp
ad_system/test/: Test  build.sh  fjp  test_glog.cpp  test_split.cpp
boost/: 1.异步分配内存.cpp  2.引用计数缓冲区.cpp  3.chat_client.cpp  3.chat_server.cpp  5.守护进程fork_daemon.cpp  Makefile  async_tcp_echo_server.cpp  blocking_tcp_echo_server.cpp  blocking_udp_echo_client.cpp  blocking_udp_echo_server.cpp  build.sh  daytime1.同步TCP客户端.cpp  daytime2.同步TCP服务端.cpp  daytime3.异步TCP服务端.cpp  daytime4.同步UDP客户端.cpp  daytime5.同步UDP服务端.cpp  daytime6.异步UDP服务端.cpp  daytime7.异步TCP_UCP服务端.cpp  process_per_connection.cpp  serialiaztion.cpp  time1_同步定时器.cpp  time2_异步定时器.cpp  time3_带参回调函数实现重复计时器.cpp  time4_使用类成员函数做回调函数.cpp  time5_多线程使用回调函数.cpp  timer.cpp
boost/http_server/: CMakeLists.txt  main.cpp
boost/program_options/: program_options.cpp  program_options_2.cpp
boost/serialization/: main  test
c++11/: 01.smartPointer.cpp  02.循环引用.cpp  LRUCache.cpp  build.sh
exp_小流量控制/: exp.conf  exp.cpp  exp.h  main.cpp
google_benchmark/: a.out  build.sh  main.cpp
google_test/: color.cpp  ftest.h  log.cpp  test.cpp
interview/: 01访问基类的私有虚函数.cpp  build.sh
invert/: CMakeLists.txt  invert.hpp  invertCreator.cpp
invert_table/: invert_table.h  invert_table_creator.hpp  z_invert_table.h
ipc/: fifo_client.c  fifo_server.c  pipe.c  sem_comm.c  sem_comm.h  sem_set.c  shm_client.c  shm_comm.c  shm_comm.h  shm_server.c
libevent/: http-server.c
libevent/HTTP_SERVER/: build.sh  main.cpp
libevent/sample/: demo.c  event_tcp_server.c
linux三种特殊进程/: 01孤儿进程.cpp  02僵尸进程.cpp  a.out  daemond.cpp  orphan_process.cpp
pb_test/: Generate_pb.sh  Mymessage.proto  Reader.cpp  Writer.cpp  makefile
produce_consume/: 01.单生产者-单消费者模型.cpp  02.单生产者-多消费者模型.cpp  03.多生产者-单消费者模型.cpp  04.多生产者-多消费者模型.cpp
sharedLib_ex/: CMakeLists.txt  library.cpp  library.h
sharedLib_ex/test/: CMakeLists.txt  main.cpp
stl/: String.cpp  stl_16_1.cpp  stl_16_2.cpp  stl_16_3.cpp  stl_16_4.cpp  stl_16_5.cpp  stl_16_6.cpp  stl_16_7.cpp  stl_16_8.cpp
test/: build.sh  endianconv.c  file_read_write.cpp  main.cpp  main.cpp.template  stl_1.11.cpp  stl_1.12.cpp  test  test.c  test.cpp  test_environ.c  test_erase.cpp  test_exit.c  test_forward.cpp  test_gethostbyname.c  test_global.cpp  test_global.h  test_move.cpp  test_mutiThread.cc  test_va_start.c
test/linux_file_op/: madvise-test.c  pread.c  res_virt_mem.c  sleep_ms.c
zl_threadpool/: Makefile
zl_threadpool/01_simple_threadPool/: threadPool.cpp
zl_threadpool/03_ThreadPool/: ThreadPool.h
zl_threadpool/ThreadPoolCpp03/: Makefile
zl_threadpool/ThreadPoolCpp11/: Makefile  ThreadPool.h  main.cpp
zl_threadpool/ThreadPoolCpp14/: ThreadPool.h  build.sh  main.cpp
zl_threadpool/ThreadPoolCpp98/: Makefile
